# get-it-going

./: Cargo.toml  Justfile  README.md  config.example.toml  rustfmt.toml
src/: main.rs
