[package]
name = "get-it-going"
description = "User friendly bootstrapping of tools that require per-project installs"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/get-it-going"

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.toml]
version = "0.8.8"
default-features = false
features = [
    "parse",
]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
