[package]
name = "get-it-going"
description = "User friendly bootstrapping of tools that require per-project installs"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/get-it-going"
publish = false

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
shlex = "1.2"

[dependencies.env_logger]
# 0.11 removes the color/styling API I am using :(
version = "0.10"
default-features = false
features = [
    "auto-color",
]

[dependencies.once_cell]
version = "1.19"
default-features = false
features = [
    "alloc",
    "std",
]

[dependencies.toml]
version = "0.8"
default-features = false
features = [
    "parse",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.fast]
inherits = "release"
opt-level = 3
panic = "unwind"
